# libreoffice-convertor

./: .gitignore  CMakeLists.txt  README.md  convertor.cpp
